DATA: Changed database

--- a/Angel/it.lproj/Localizable.strings
+++ b/Angel/it.lproj/Localizable.strings
@@ -37,12 +37,12 @@
 "Hope" = "Speranza";
 "Blessing" = "Benedizione";
 "Forgiveness" = "Perdono";
-"Abundance" = "Abbandono";
+"Abundance" = "Abbondanza";
 "Courage" = "Coraggio";
 "Joy" = "Gioia";
 "Protection" = "Protezione";
 "Transformation" = "Trasformazione";
-"Self-Care" = "Automedicazione";
+"Self-Care" = "Cura di se";
 "Relationships" = "Relazioni";
 "Success" = "Successo";
 "Confidence" = "Fiducia";
