FEAT: Add to favorite phrases

--- a/Angel/en.lproj/Localizable.strings
+++ b/Angel/en.lproj/Localizable.strings
@@ -38,6 +38,7 @@
 "See-More" = "See more";
 "You-Havent-Made-Meditations" = "You haven't made any meditation yet";
 "Phrases" = "Phrases";
+"You-Havent-Favorite-Phrases" = "You haven't favorites phrases yet";
 "See-Favorites" = "See favorites";
 "Settings" = "Settings";
 "Go-To-Settings" = "Go to settings";
