--- a/Angel/it.lproj/Localizable.strings
+++ b/Angel/it.lproj/Localizable.strings
@@ -39,6 +39,7 @@
 "See-More" = "Vedi di più";
 "You-Havent-Made-Meditations" = "Non hai ancora fatto meditazioni";
 "Phrases" = "Frasi";
+"You-Havent-Favorite-Phrases" = "Non hai ancora frasi preferite";
 "See-Favorites" = "Vedi preferite";
 "Settings" = "Impostazioni";
 "Go-To-Settings" = "Vai a impostazioni";
