GUI: Profile: favorite PhrasesView, part of MeditationsView

--- a/Angel/en.lproj/Localizable.strings
+++ b/Angel/en.lproj/Localizable.strings
@@ -42,6 +42,9 @@
 "See-Favorites" = "See favorites";
 "Settings" = "Settings";
 "Go-To-Settings" = "Go to settings";
+"Collapse-Chart" = "Collapse chart";
+"Expand-Chart" = "Expand chart";
+"Favorites" = "Favorites";
 
 "Start-Meditation-Speech" = "Let's start this meditation, close your eyes, relax and flow within";
 "Thank-You-Meditation-Speech" = "Thank you to have followed this meditation, i hope you feel better";
