--- a/Angel/it.lproj/Localizable.strings
+++ b/Angel/it.lproj/Localizable.strings
@@ -43,6 +43,9 @@
 "See-Favorites" = "Vedi preferite";
 "Settings" = "Impostazioni";
 "Go-To-Settings" = "Vai a impostazioni";
+"Collapse-Chart" = "Collassa grafico";
+"Expand-Chart" = "Espandi grafico";
+"Favorites" = "Preferiti";
 
 "Start-Meditation-Speech" = "Iniziamo questa meditazione, chiudi gli occhi, rilassati e lasciati andare";
 "Thank-You-Meditation-Speech" = "Grazie per aver seguito questa meditazione, spero tu ti senta meglio";
