LOCALIZATION: Correction phrases

--- a/Angel/en.lproj/Localizable.strings
+++ b/Angel/en.lproj/Localizable.strings
@@ -567,7 +567,7 @@
 "Phrase−Abundance−79" = "May you attract an abundance of opportunities that align with your purpose and bring you fulfillment.";
 "Phrase−Abundance−80" = "May you be blessed with an abundance of courage and determination to pursue your dreams and aspirations.";
 "Phrase−Abundance−81" = "May your life be filled with an abundance of gratitude, and may it attract more blessings into your reality.";
-"Phrase−Abundance−82" = "May you attract an abundance of abundance, and may it overflow into all areas of your life.";
+"Phrase−Abundance−82" = "May you attract abundance, and may it overflow into all areas of your life.";
 "Phrase−Abundance−83" = "May you be surrounded by an abundance of positive people who support and encourage your growth.";
 "Phrase−Abundance−84" = "May your life be filled with an abundance of good fortune, and may it bring you prosperity and success.";
 "Phrase−Abundance−85" = "May you attract an abundance of healing energy, and may it restore your mind, body, and spirit.";
@@ -794,7 +794,7 @@
 "Phrase−Protection−3" = "Trust in the divine plan. Everything will work out for your highest good.";
 "Phrase−Protection−4" = "I am here to help you find the courage and strength to overcome any obstacle.";
 "Phrase−Protection−5" = "Let go of your worries and fears. I will hold them for you.";
-"Phrase−Protection−6" = "You are loved and cherished, and your well-being is my priority.";
+"Phrase−Protection−6" = "You are loved and cherished, and your well-being is the priority.";
 "Phrase−Protection−7" = "Close your eyes and feel my presence. You are safe in my arms.";
 "Phrase−Protection−8" = "Believe in yourself and your abilities. You have the power to overcome any challenge.";
 "Phrase−Protection−9" = "I am sending you a shield of divine protection. Nothing can harm you.";
@@ -1074,7 +1074,7 @@
 "Phrase−Selfcare−81" = "Taking care of yourself is not just about physical health, it's also about mental and emotional health. Prioritize both.";
 "Phrase−Selfcare−82" = "Self-care is not about being perfect, it's about doing what you can to take care of yourself in the moment.";
 "Phrase−Selfcare−83" = "Remember that self-care is not just about the things you do, it's also about the things you don't do. Set boundaries.";
-"Phrase−Selfcare−84" = "Taking care of yourself is not selfish, it's necessary. You can't pour from an empty cup.";
+"Phrase−Selfcare−84" = "Taking care of yourself is not selfish, it's necessary. You need it to give your best.";
 "Phrase−Selfcare−85" = "Self-care is not about being lazy or indulgent, it's about being intentional with your time and energy.";
 "Phrase−Selfcare−86" = "Remember that self-care is not just about what you do for yourself, it's also about the people and things you surround yourself with.";
 "Phrase−Selfcare−87" = "Taking care of yourself is not a luxury, it's a necessity. Make it a non-negotiable part of your life.";
@@ -1147,11 +1147,11 @@
 "Phrase−Relationships−53" = "Communication is key to any successful relationship. Make time to listen and express your thoughts and feelings.";
 "Phrase−Relationships−54" = "Remember that conflicts and disagreements are normal. Work together to find a solution that works for both parties.";
 "Phrase−Relationships−55" = "Trust your instincts and intuition when it comes to relationships. They can often guide you in the right direction.";
-"Phrase−Relationships−56" = "Be generous with your time, energy, and resources. It shows your loved ones that you care and are invested in the relationship.";
+"Phrase−Relationships−56" = "Be generous with your time, energy, and resources. It shows your loved ones that you care and are involved in the relationship.";
 "Phrase−Relationships−57" = "Don't be afraid to be vulnerable and open with your loved ones. It can lead to deeper connections and understanding.";
 "Phrase−Relationships−58" = "Practice active listening and empathy in your relationships. It shows your loved ones that you are truly present and engaged.";
 "Phrase−Relationships−59" = "Be patient and understanding when your loved ones are going through a difficult time. It's important to support each other through both the good and the bad.";
-"Phrase−Relationships−60" = "Celebrate each other's accomplishments and milestones. It shows that you are invested in each other's happiness and success.";
+"Phrase−Relationships−60" = "Celebrate each other's accomplishments and milestones. It shows that you are involved in each other's happiness and success.";
 "Phrase−Relationships−61" = "Remember that forgiveness is an essential part of any healthy relationship. It allows you to move forward and grow together.";
 "Phrase−Relationships−62" = "Take responsibility for your actions and words. It shows maturity and respect for yourself and others.";
 "Phrase−Relationships−63" = "Be honest and transparent in your relationships. It builds trust and creates a foundation for deeper connections.";
