GUI: Created PayWallView

--- a/Angel/en.lproj/Localizable.strings
+++ b/Angel/en.lproj/Localizable.strings
@@ -48,6 +48,29 @@
 "Favorites" = "Favorites";
 "You-Meditated" = "You meditated";
 "You-Felt" = "You felt";
+"Go-Premium" = "Go Premium";
+"Get-Access-Features" = "Get access to all features";
+"Get-All-Phrases" = "2000+ angelic phrases";
+"Get-All-Phrases-Caption" = "Get access to all the phrases";
+"Speech-The-Phrases" = "Hear the phrases";
+"Speech-The-Phrases-Caption" = "Don't limit to read, but hear your phrases";
+"Meditation-With-Phrases" = "Meditate with the phrases";
+"Meditation-With-Phrases-Caption" = "Meditate while listening to the angelic phrases";
+"Meditation-By-Category" = "Meditation by category";
+"Meditation-By-Category-Caption" = "Meditate choosing the category of phrases you prefer";
+"Meditation-By-Day" = "Meditation Of The Day";
+"Meditation-By-Day-Caption" = "Every day a new mediation generated for you";
+"Meditation-By-Featured" = "Featured Meditations";
+"Meditation-By-Featured-Caption" = "New featured meditations every week with merged categories";
+"More-Phrases-Coming" = "More phrases coming";
+"More-Phrases-Coming-Caption" = "New phrases for each category";
+"Continue" = "Continue";
+"And-Coming-Soon" = "And coming soon...";
+"Select-Plan" = "Select the plan";
+"Year" = "year";
+"Support-Developer" = "And most importantly at price of couple of coffees you will support an indipendent developer";
+"Restore-Purchase" = "Restore Purchase";
+"Payment-Disclaimer" = "Payment will be charged to your iTunes account at confirmation of purchase. Subscriptions will automatically renew unless auto-renew is turned off at least 24 hours before the end of current period. Your account will be charged according to your plan for renewal whitin 24 hours prior to the end of the current period. You can manage or turn off auto renew in your Apple ID account settings at any time after purchase.";
 
 "Start-Meditation-Speech" = "Let's start this meditation, close your eyes, relax and flow within";
 "Thank-You-Meditation-Speech" = "Thank you to have followed this meditation, i hope you feel better";
