--- a/Angel/it.lproj/Localizable.strings
+++ b/Angel/it.lproj/Localizable.strings
@@ -49,6 +49,29 @@
 "Favorites" = "Preferiti";
 "You-Meditated" = "Hai meditato";
 "You-Felt" = "Ti sei sentito";
+"Go-Premium" = "Passa a Premium";
+"Get-Access-Features" = "Ottieni l'accesso a tutte le funzionalità";
+"Get-All-Phrases" = "2000+ frasi angeliche";
+"Get-All-Phrases-Caption" = "Ottieni l'accesso a tutte le frasi";
+"Speech-The-Phrases" = "Ascolta le frasi";
+"Speech-The-Phrases-Caption" = "Non ti limitare a leggere ma ascolta le frasi";
+"Meditation-With-Phrases" = "Medita con le frasi";
+"Meditation-With-Phrases-Caption" = "Medita mentre ascolti le frasi angeliche";
+"Meditation-By-Category" = "Meditazione per categoria";
+"Meditation-By-Category-Caption" = "Medita scegliendo la categoria delle frasi che preferisci";
+"Meditation-By-Day" = "Meditazione del giorno";
+"Meditation-By-Day-Caption" = "Ogni giorno una nuova meditazione generata per te";
+"Meditation-By-Featured" = "Meditazioni in primo piano";
+"Meditation-By-Featured-Caption" = "Nuove meditazioni in primo piano ogni settimana con le categorie unite";
+"More-Phrases-Coming" = "Altre frasi in arrivo";
+"More-Phrases-Coming-Caption" = "Nuove frasi per ogni categoria";
+"Continue" = "Continua";
+"And-Coming-Soon" = "E in arrivo...";
+"Select-Plan" = "Seleziona il piano";
+"Year" = "anno";
+"Support-Developer" = "E, cosa più importante, al prezzo di un paio di caffe supporterai uno sviluppatore indipendente";
+"Restore-Purchase" = "Ripristinare acquisto";
+"Payment-Disclaimer" = "Il pagamento verrà addebitato sul tuo account iTunes alla conferma dell'acquisto. Gli abbonamenti si rinnoveranno automaticamente a meno che il rinnovo automatico non venga disattivato almeno 24 ore prima della fine del periodo corrente. Il tuo account verrà addebitato in base al tuo piano di rinnovo entro 24 ore prima della fine del periodo corrente. Puoi gestire o disattivare il rinnovo automatico nelle impostazioni del tuo account ID Apple in qualsiasi momento dopo l'acquisto.";
 
 "Start-Meditation-Speech" = "Iniziamo questa meditazione, chiudi gli occhi, rilassati e lasciati andare";
 "Thank-You-Meditation-Speech" = "Grazie per aver seguito questa meditazione, spero tu ti senta meglio";
