FEAT: Paywall communicating with RevenueCat

--- a/Angel/en.lproj/Localizable.strings
+++ b/Angel/en.lproj/Localizable.strings
@@ -71,6 +71,8 @@
 "Support-Developer" = "And most importantly at price of couple of coffees you will support an indipendent developer";
 "Restore-Purchase" = "Restore Purchase";
 "Payment-Disclaimer" = "Payment will be charged to your iTunes account at confirmation of purchase. Subscriptions will automatically renew unless auto-renew is turned off at least 24 hours before the end of current period. Your account will be charged according to your plan for renewal whitin 24 hours prior to the end of the current period. You can manage or turn off auto renew in your Apple ID account settings at any time after purchase.";
+"Processing" = "Processing";
+"All-Set-Premium" = "All set, wait just a couple of seconds while activating your account";
 
 "Start-Meditation-Speech" = "Let's start this meditation, close your eyes, relax and flow within";
 "Thank-You-Meditation-Speech" = "Thank you to have followed this meditation, i hope you feel better";
