--- a/Angel/it.lproj/Localizable.strings
+++ b/Angel/it.lproj/Localizable.strings
@@ -72,6 +72,8 @@
 "Support-Developer" = "E, cosa più importante, al prezzo di un paio di caffe supporterai uno sviluppatore indipendente";
 "Restore-Purchase" = "Ripristinare acquisto";
 "Payment-Disclaimer" = "Il pagamento verrà addebitato sul tuo account iTunes alla conferma dell'acquisto. Gli abbonamenti si rinnoveranno automaticamente a meno che il rinnovo automatico non venga disattivato almeno 24 ore prima della fine del periodo corrente. Il tuo account verrà addebitato in base al tuo piano di rinnovo entro 24 ore prima della fine del periodo corrente. Puoi gestire o disattivare il rinnovo automatico nelle impostazioni del tuo account ID Apple in qualsiasi momento dopo l'acquisto.";
+"Processing" = "Processando";
+"All-Set-Premium" = "Tutto pronto, attendi solo un paio di secondi mentre il tuo account viene attivato";
 
 "Start-Meditation-Speech" = "Iniziamo questa meditazione, chiudi gli occhi, rilassati e lasciati andare";
 "Thank-You-Meditation-Speech" = "Grazie per aver seguito questa meditazione, spero tu ti senta meglio";
@@ -664,7 +666,7 @@
 "Phrase−Courage−50" = "Alzati al di sopra delle tue paure e vola verso i tuoi sogni.";
 "Phrase−Courage−51" = "Sei più forte di quanto pensi e capace di raggiungere la grandezza.";
 "Phrase−Courage−52" = "Non lasciare che i dubbi su te stesso ti impediscano di perseguire le tue passioni.";
-"Phrase−Courage−53" = "Quando la strada si fa dura, ricorda la forza e il coraggio che ci sono dentro di te."
+"Phrase−Courage−53" = "Quando la strada si fa dura, ricorda la forza e il coraggio che ci sono dentro di te.";
 "Phrase−Courage−54" = "Mantieni la speranza e sappi che ti aspettano giorni migliori.";
 "Phrase−Courage−55" = "La tua perseveranza e determinazione ti accompagneranno in ogni sfida.";
 "Phrase−Courage−56" = "Abbraccia l'ignoto ed entra con coraggio nel futuro.";
