--- a/Angel/it.lproj/Localizable.strings
+++ b/Angel/it.lproj/Localizable.strings
@@ -10,8 +10,15 @@
 "Tell-Me-Something" = "Dimmi qualcosa di te";
 "What-Is-Your-Name?" = "Qual è il tuo nome?";
 "Insert-Name" = "Scrivi il tuo nome";
+"What-Is-Your-Email?" = "Qual è la tua mail?";
+"Insert-Email" = "Scrivi la tua email";
+"Repeat-Your-Email" = "Ripeti la tua email";
+"Repeat-Email" = "Scrivi di nuovo la tua email";
+"Insert-Valid-Email" = "Potremmo usare la tua mail per ripristinare il tuo account e pagamenti, sii sicuro di inserirla correttamente";
+"Please-Insert-Your-Name" = "Perfavore inserisci il tuo nome";
+"Please-Insert-Your-Email" = "Perfavore inserisci la tua email";
+"Please-Insert-Same-Email" = "Controlla che le email combacino";
 "Create-Profile" = "Crea il tuo profilo";
-
 "Like" = "Mi Piace";
 "Share" = "Condividi";
 "Buddy" = "Amico";
@@ -74,6 +81,8 @@
 "Payment-Disclaimer" = "Il pagamento verrà addebitato sul tuo account iTunes alla conferma dell'acquisto. Gli abbonamenti si rinnoveranno automaticamente a meno che il rinnovo automatico non venga disattivato almeno 24 ore prima della fine del periodo corrente. Il tuo account verrà addebitato in base al tuo piano di rinnovo entro 24 ore prima della fine del periodo corrente. Puoi gestire o disattivare il rinnovo automatico nelle impostazioni del tuo account ID Apple in qualsiasi momento dopo l'acquisto.";
 "Processing" = "Processando";
 "All-Set-Premium" = "Tutto pronto, attendi solo un paio di secondi mentre il tuo account viene attivato";
+"Go-Premium-To-Hear-Phrases" = "Passa a premium per ascoltare le frasi";
+"Go-Premium-To-Meditate" = "Passa a premium per meditare";
 
 "Start-Meditation-Speech" = "Iniziamo questa meditazione, chiudi gli occhi, rilassati e lasciati andare";
 "Thank-You-Meditation-Speech" = "Grazie per aver seguito questa meditazione, spero tu ti senta meglio";
