GUI: Fix PayWall text and button behaviour

--- a/Angel/en.lproj/Localizable.strings
+++ b/Angel/en.lproj/Localizable.strings
@@ -103,6 +103,7 @@
 "All-Set-Premium" = "All set, wait just a couple of seconds while activating your account";
 "Go-Premium-To-Hear-Phrases" = "Go premium to hear phrases";
 "Go-Premium-To-Meditate" = "Go premium to meditate";
+"Select-A-Plan" = "Selecet a plan";
 
 "Coming-Soon" = "Coming Soon...";
 "For-Premium-User" = "For Premium user";
