--- a/Angel/it.lproj/Localizable.strings
+++ b/Angel/it.lproj/Localizable.strings
@@ -103,6 +103,7 @@
 "All-Set-Premium" = "Tutto pronto, attendi solo un paio di secondi mentre il tuo account viene attivato";
 "Go-Premium-To-Hear-Phrases" = "Passa a premium per ascoltare le frasi";
 "Go-Premium-To-Meditate" = "Passa a premium per meditare";
+"Select-A-Plan" = "Seleziona un piano";
 
 "Coming-Soon" = "Prossimamente...";
 "For-Premium-User" = "Per utente Premium";
