FEAT: Share feature

--- a/Angel/en.lproj/Localizable.strings
+++ b/Angel/en.lproj/Localizable.strings
@@ -37,6 +37,7 @@
 "Edit-Your-Profile" = "Edit your profile";
 "Like" = "Like";
 "Share" = "Share";
+"Shared-Phrase %@" = "Share %@ Phrase";
 "Buddy" = "Buddy";
 "Meditation" = "Meditation";
 "Meditations" = "Meditations";
