--- a/Angel/it.lproj/Localizable.strings
+++ b/Angel/it.lproj/Localizable.strings
@@ -37,6 +37,7 @@
 "Edit-Your-Profile" = "Modifica il tuo profilo";
 "Like" = "Mi Piace";
 "Share" = "Condividi";
+"Shared-Phrase %@" = "Condividi frase %@";
 "Buddy" = "Amico";
 "Meditation" = "Meditazione";
 "Meditations" = "Meditazioni";
